Fix bug where mobile toolbar menu button could go out of screen

--- a/skins/elastic/styles/layout.less
+++ b/skins/elastic/styles/layout.less
@@ -155,6 +155,7 @@ body {
     flex: 6;
     flex-direction: column;
     background-color: @color-layout-content-background;
+    width: 100%;
 
     html.iframe & {
         height: 100%;
